Change order save logic, and remove mysql manifest
- Unify mysql kubernetes manifest to only one

- Change response in getAllIngredients in client

- Add fetch logic to saveOrder method

- Adapt order object to be able to send it

- Change how the ingredients are send them in the order object

- Change how the pizze entity is joing to the ingredient enity